[metadata]
name = vmrun
version = 0.0.2
author = Abdellah_Rhouddani
author_email = abdellahrhouddani@gmail.com
description = Manage Vmware Player using CLI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alrhouddani/vmrun
project_urls =
    Bug Tracker = https://github.com/alrhouddani/vmrun/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src